--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="forgotten_password_title">Mot de passe oublié ?</string>
     <string name="ok_btn">Ok</string>
     <string name="flurry_key">48H6FGXR3FWGPNH4J9RZ</string>
+    <string name="Bundles_title">Mes forfaits</string>
+    <string name="update_bundle_btn_label">changer mon forfait</string>
 </resources>
