add services update ws

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -2,26 +2,25 @@
     <string name="app_name">Gray</string>
     <string name="show_more_btn"><u>المزيد</u></string>
     <string name="payments_list_title">الآداء</string>
-    <string name="unpaid_list_title">Liste des impayées</string>
+    <string name="unpaid_list_title">قائمة الفواتير غير المسددة</string>
     <string name="activate_btn">تشغيل الخط</string>
     <string name="buy_btn">شراء رصيد</string>
     <string name="renew_btn">تجديد الفورفي</string>
     <string name="phone_string"><u>0801 000 888</u></string>
     <string name="phone_string2"><u>888</u></string>
-    <string name="arabic_label"><u>العربية</u></string>
+    <string name="arabic_label">العربية</string>
     <string name="french_label">Français</string>
     <string name="help_label">مساعدة</string>
     <string name="contracts_label">عقودي</string>
     <string name="info_label">حسابي</string>
     <string name="close_label">X</string>
-    <string name="cart_title">Panier</string>
     <string name="bundle_label">الفورفي</string>
     <string name="number_label">رقم الهاتف</string>
     <string name="date_label">تاريخ التجديد</string>
     <string name="total_label">المجموع</string>
     <string name="show_details"><u>المزيد من المعلومات</u></string>
     <string name="save_btn_label">حفظ</string>
-    <string name="available_services_title">الخدمات المتاح</string>
+    <string name="available_services_title">الخدمات المتاحة</string>
     <string name="affected_services_title">الخدمات المتأثرة</string>
     <string name="pay_btn_text">ادفع</string>
     <string name="payments_title">الآداء</string>
@@ -31,11 +30,11 @@
     <string name="suspend_contract_btn"><u>تعليق عقدي</u></string>
     <string name="renew_contract_btn"><u>تجديد عقدي</u></string>
     <string name="delete_contract_btn"><u>إلغاء عقدي</u></string>
-    <string name="bloqued_sim_btn"><u>شريحة SIM محظورة أو مسروقة؟</u></string>
+    <string name="blocked_sim_btn"><u>شريحة SIM محظورة أو مسروقة؟</u></string>
     <string name="resend_code_puk_btn"><u>إعادة إرسال رمز PUK</u></string>
     <string name="logout_btn_label">إنهاء الاتصال</string>
     <string name="login_btn">الربط</string>
-    <string name="discover_offer_btn_label">découvrez nos offres</string>
+    <string name="discover_offer_btn_label">اكتشف عروضنا</string>
     <string name="forgotten_password_btn">نسيت كلمة السر</string>
     <string name="password_hint">كلمة السر</string>
     <string name="address_mail_hint">البريد الإلكتروني</string>
@@ -50,62 +49,72 @@
     <string name="phone_hint">الهاتف</string>
     <string name="city_label">المدينة :</string>
     <string name="city_hint">المدينة</string>
-    <string name="password_label"> كلمة السر :</string>
+    <string name="password_label">كلمة السر :</string>
     <string name="address_label">العنوان :</string>
     <string name="address_hint">العنوان</string>
-    <string name="civility_hint">Civilité :</string>
-    <string name="women_hint">Mme</string>
-    <string name="men_hint">M</string>
-    <string name="update_password_title">Changer mot de passe :</string>
-    <string name="new_password_title">Nouveau mot de passe :</string>
+    <string name="civility_hint">حالة مدنية :</string>
+    <string name="women_hint">السيدة</string>
+    <string name="men_hint">السيد</string>
+    <string name="update_password_title">تغير كلمة السر :</string>
+    <string name="new_password_title">كلمة السر الجديدة :</string>
     <string name="confirm_password_hint">تاكيد  كلمة السر</string>
     <string name="cancel_btn_label">إلغاء</string>
     <string name="forgotten_password_title">نسيت كلمة السر؟</string>
     <string name="ok_btn">موافق</string>
     <string name="Bundles_title">الفورفيات</string>
     <string name="update_bundle_btn_label">تغيير طردي</string>
-    <string name="buy_bundle_btn_label">payer ce forfait</string>
     <string name="no_hint">إلغاء</string>
     <string name="yes_hint">موافق</string>
-    <string name="purchase_btn_label">Commander</string>
-    <string name="offers_label">Offres</string>
-    <string name="sim_received_dialog_title">Avez-vous reçu votre\ncarte SIM ?</string>
-    <string name="sim_received_dialog_description">Une fois votre SIM récupérée et afin d’activer votre ligne, vous avez besoin d’activer votre ligne depuis votre espace client</string>
     <string name="logout_discreption">هل أنت متأكد أنك تريد تسجيل الخروج من حسابك ؟</string>
     <string name="help_title">مساعدة</string>
-    <string name="faq_title">FAQ</string>
-    <string name="service_title">Service client à contacter</string>
+    <string name="faq_title">التعليمات</string>
     <string name="internet_label">الانترنت</string>
     <string name="postal_code_hint">رقم بريد</string>
     <string name="postal_code_label">رقم بريد :</string>
-    <string name="confirm_btn_label">Confirmer</string>
-    <string name="reason_hint">Saisir un motif</string>
-    <string name="contract_code_hint">Saisir le code du contrat</string>
-    <string name="resend_btn_label">Renvoyer</string>
-    <string name="phone_number_hint">Saisis votre numéro de téléphone</string>
-    <string name="suspend_contract_title">Confirmer la suspension de\nmon contrat</string>
-    <string name="suspend_contract_message">Si vous confirmez et mettez en suspens votre contrat maintenant, vous pourrez le réinitialiser à tout moment en passant par votre espace client Gray</string>
-    <string name="renew_contract_title">Renouveler mon\ncontrat</string>
-    <string name="renew_contract_message">Votre nouveau contrat débutera le 10/06/2021 Le forfait Gray sélectionné est de 30 GO à 159 DH</string>
-    <string name="end_contract_title">Confirmer la résiliation de\nmon contrat</string>
-    <string name="end_contract_message">Si vous confirmez et mettez fin à votre contrat maintenant, vous continuerez d’en bénéficier jusqu’au 28/06/2021</string>
-    <string name="change_sim_title">Carte SIM bloquée\nou volée</string>
-    <string name="change_sim_message">Pour débloquer votre carte SIM, merci de prendre contact avec notre service client Gray au 777 (Abonnés) / 888 (Jawal)</string>
-    <string name="resend_puk_title">Renvoyer le code PUK</string>
-    <string name="resend_puk_message">Ce service vous permet de récupérer votre code PUK lorsque votre carte SIM est bloquée</string>
+    <string name="confirm_btn_label">تأكيد</string>
+    <string name="resend_btn_label">إعادة إرسال</string>
+    <string name="suspend_contract_title">تأكيد تعليق عقدي</string>
+    <string name="suspend_contract_message">إذا قمت بتأكيد تعليق عقدكالآن ، فيمكنك إعادة تعيينه في أي وقت من خلال espace client Gray الخاصة بك.</string>
+    <string name="renew_contract_title">تجديد عقدي</string>
+    <string name="end_contract_title">تأكيد إنهاء عقدي</string>
+    <string name="change_sim_title">شريحة SIM محظورة أو مسروقة</string>
+    <string name="resend_puk_title">إعادة إرسال رمز PUK</string>
+    <string name="resend_puk_message">تتيح لك هذه الخدمة استرداد رمز PUK الخاص بك عند حظر بطاقة SIM الخاصة بك</string>
     <string name="bundle_menu_item_label">عرضي</string>
     <string name="payments_menu_item_label">دفوعاتي</string>
     <string name="services_menu_item_label">خدماتي</string>
     <string name="update_bundle_menu_item_label">تغيير الفورفي</string>
     <string name="change_password_title">تغيير كلمة السر :</string>
     <string name="new_password_label">كلمة السر الجديدة :</string>
-    <string name="contract_name_label">Formule :</string>
+    <string name="contract_name_label">الصيغة :</string>
     <string name="msisdn_label">رقم الاتصال :</string>
-    <string name="client_number_label">Numéro client :</string>
-    <string name="activation_date_label">Date activation :</string>
-    <string name="commitment_date">Date d’engagement :</string>
-    <string name="call_label">Voix</string>
+    <string name="client_number_label">رقم الحريف :</string>
+    <string name="activation_date_label">تاريخ التفعيل :</string>
+    <string name="commitment_date">تاريخ الالتزام :</string>
+    <string name="call_label">مكالمات</string>
     <string name="end_at">تنتهي صلاحيته في </string>
     <string name="start_at">يبدأ في </string>
     <string name="price_unit">د.م\n/ شهر</string>
+    <string name="change_sim_message">لفتح بطاقة SIM الخاصة بك ، يرجى الاتصال بخدمة عملاء Gray على 777 (Abonnés) / 888 (Jawal).</string>
+    <string name="end_contract_dialog_description">إذا قمت بتأكيد عقدك وإنهيه الآن ، ستستمر في الاستفادة منه حتى </string>
+    <string name="renew_contract_dialog_description">سيبدأ عقدك الجديد في </string>
+    <string name="to_label"> بسعر </string>
+    <string name="bundle_name_label">الفورفي المختار هو</string>
+    <string name="dh_label">درهم</string>
+    <string name="buy_recharge_title">شراء رصيد</string>
+    <string name="buy_btn_label">شراء</string>
+    <string name="later_btn_label">لاحقاً</string>
+    <string name="update_btn_label">تحديث</string>
+    <string name="settings_btn_label">الإعدادات</string>
+    <string name="line_activation_title">رمز لإدخاله من أجل تفعيل الخط</string>
+    <string name="code">رمز</string>
+    <string name="validate_btn_label">تأكيد</string>
+    <string name="sim_received_dialog_title">هل تلقيت بطاقة SIM الخاصة بك؟</string>
+    <string name="sim_received_dialog_description"> بمجرد حصولك على بطاقة SIM الخاصة بك, لتفعيل خطك ، تحتاج إلى تنشيط خطك من منطقة العملاء الخاصة بك</string>
+    <string name="reason_hint">أدخل سبب</string>
+    <string name="contract_code_hint">أدخل رمز العقد</string>
+    <string name="phone_number_hint">أدخل رقم هاتفك</string>
+    <string name="renew_bundle_description">هل أنت متأكد أنك تريد تجديد خطتك؟</string>
+    <string name="confirm_recharge_dialog">سوف تتلقى رسالة نصية لتأكيد الشحن</string>
+    <string name="biometrics_message_description">ستتمكن من استخدام بيانات بصمة الخاصة بك لتسجيل الدخول التالي.</string>
 </resources>
