--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="contracts_label">Mes contrats</string>
     <string name="info_label">Mon compte</string>
     <string name="close_label">X</string>
-    <string name="cart_title">Panier</string>
     <string name="bundle_label">Forfait</string>
     <string name="number_label">Numéro</string>
     <string name="date_label">Date de renouvellement</string>
@@ -31,7 +30,7 @@
     <string name="suspend_contract_btn"><u>Suspendre mon contrat</u></string>
     <string name="renew_contract_btn"><u>Renouveler mon contrat</u></string>
     <string name="delete_contract_btn"><u>Résilier mon contrat</u></string>
-    <string name="bloqued_sim_btn"><u>Carte SIM bloquée ou volée ?</u></string>
+    <string name="blocked_sim_btn"><u>Carte SIM bloquée ou volée ?</u></string>
     <string name="resend_code_puk_btn"><u>Renvoyer le code PUK</u></string>
     <string name="logout_btn_label">Déconnexion</string>
     <string name="login_btn">connexion</string>
@@ -61,20 +60,16 @@
     <string name="confirm_password_hint">Confirmer mot de passe</string>
     <string name="cancel_btn_label">Annuler</string>
     <string name="forgotten_password_title">Mot de passe oublié ?</string>
-    <string name="ok_btn">Ok</string>
+    <string name="ok_btn">OK</string>
     <string name="Bundles_title">Mes forfaits</string>
     <string name="update_bundle_btn_label">changer mon forfait</string>
-    <string name="buy_bundle_btn_label">payer ce forfait</string>
     <string name="no_hint">Non</string>
     <string name="yes_hint">Oui</string>
-    <string name="purchase_btn_label">Commander</string>
-    <string name="offers_label">Offres</string>
     <string name="sim_received_dialog_title">Avez-vous reçu votre\ncarte SIM ?</string>
     <string name="sim_received_dialog_description">Une fois votre SIM récupérée et afin d’activer votre ligne, vous avez besoin d’activer votre ligne depuis votre espace client</string>
     <string name="logout_discreption">Etes vous sûr de vouloir vous déconnecter ?</string>
     <string name="help_title">Assitance</string>
     <string name="faq_title">FAQ</string>
-    <string name="service_title">Service client à contacter</string>
     <string name="internet_label">Internet</string>
     <string name="postal_code_hint">Code postal</string>
     <string name="postal_code_label">Code postal :</string>
@@ -86,9 +81,7 @@
     <string name="suspend_contract_title">Confirmer la suspension de\nmon contrat</string>
     <string name="suspend_contract_message">Si vous confirmez et mettez en suspens votre contrat maintenant, vous pourrez le réinitialiser à tout moment en passant par votre espace client Gray</string>
     <string name="renew_contract_title">Renouveler mon\ncontrat</string>
-    <string name="renew_contract_message">Votre nouveau contrat débutera le 10/06/2021 Le forfait Gray sélectionné est de 30 GO à 159 DH</string>
     <string name="end_contract_title">Confirmer la résiliation de\nmon contrat</string>
-    <string name="end_contract_message">Si vous confirmez et mettez fin à votre contrat maintenant, vous continuerez d’en bénéficier jusqu’au 28/06/2021</string>
     <string name="change_sim_title">Carte SIM bloquée\nou volée</string>
     <string name="change_sim_message">Pour débloquer votre carte SIM, merci de prendre contact avec notre service client Gray au 777 (Abonnés) / 888 (Jawal)</string>
     <string name="resend_puk_title">Renvoyer le code PUK</string>
@@ -108,4 +101,20 @@
     <string name="end_at">Expire le </string>
     <string name="start_at">Débute le </string>
     <string name="price_unit">DH\n/ mois</string>
+    <string name="line_activation_title">Code à insérer afin d’activer\nla ligne</string>
+    <string name="code">Code</string>
+    <string name="validate_btn_label">Valider</string>
+    <string name="end_contract_dialog_description">Si vous confirmez et mettez fin à votre contrat maintenant, vous continuerez d’en bénéficier jusqu’au </string>
+    <string name="renew_contract_dialog_description">"Votre nouveau contrat débutera le "</string>
+    <string name="to_label">" à "</string>
+    <string name="bundle_name_label">\"\nLe forfait Gray sélectionné est de \"</string>
+    <string name="dh_label">\" DH\"</string>
+    <string name="renew_bundle_description">Êtes vous sûr de vouloir renouveler votre forfait ?</string>
+    <string name="buy_recharge_title">Acheter une recharge</string>
+    <string name="buy_btn_label">acheter</string>
+    <string name="later_btn_label">Plus tard</string>
+    <string name="update_btn_label">Mise à jour</string>
+    <string name="confirm_recharge_dialog">Vous recevrez un SMS de confirmation de recharge</string>
+    <string name="settings_btn_label">Paramétres</string>
+    <string name="biometrics_message_description">Vous pourrez utiliser vos informations d\'identification biométriques pour la prochaine authentification.</string>
 </resources>
