--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,24 @@
     <string name="arabic_label">العربية</string>
     <string name="french_label">Français</string>
     <string name="help_label">Assistance</string>
+    <string name="cards_bank_label">Mes cartes bancaires</string>
+
+    <string name="mode_payment_label">Mode de paiement</string>
+    <string name="card_bank_label">Carte bancaire</string>
+    <string name="app_mobile_label">Via l’application mobile</string>
+    <string name="mtcash_label">MT CASH</string>
+
+    <string name="panier_label">Panier</string>
+    <string name="payment_mtcash_label">Paiement via MT CASH</string>
+    <string name="description_mtcash_label">Votre transaction ne peut pas aboutir Il semblerait qu’aucun compte MTCASH ne soit associé à ce numéro de téléphone. Veuillez saisir un autre numéro ou créer un compte MTCASH</string>
+    <string name="num_phone_label">NUMÉRO DE TÉLÉPHONE</string>
+
+    <string name="payment_mobile_label">Paiement via l’application mobile</string>
+    <string name="payment_code_label">Code de paiement</string>
+    <string name="date_exp_label">Date d’expiration</string>
+
     <string name="contracts_label">Mes contrats</string>
-    <string name="info_label">Mon compte</string>
+    <string name="info_label">Infos personnelles</string>
     <string name="close_label">X</string>
     <string name="bundle_label">Forfait</string>
     <string name="number_label">Numéro</string>
@@ -123,4 +139,6 @@
     <string name="authentification">AUTHENTIFICATION</string>
     <string name="n_cin">N° CIN :</string>
     <string name="anglais_label">Anglais</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
