--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,8 @@
     <string name="no_hint">Non</string>
     <string name="yes_hint">Oui</string>
     <string name="sim_received_dialog_title">Avez-vous reçu votre\ncarte SIM ?</string>
-    <string name="sim_received_dialog_description">Une fois votre SIM récupérée et afin d’activer votre ligne, vous avez besoin d’activer votre ligne depuis votre espace client</string>
+<!--    <string name="sim_received_dialog_description">Une fois votre SIM récupérée et afin d’activer votre ligne, vous avez besoin d’activer votre ligne depuis votre espace client</string>-->
+    <string name="sim_received_dialog_description">Vous avez besoin d\'activer votre ligne par le scanne de code à barre de la carte</string>
     <string name="logout_discreption">Etes vous sûr de vouloir vous déconnecter ?</string>
     <string name="help_title">Assitance</string>
     <string name="faq_title">FAQ</string>
@@ -142,4 +143,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_notification_channel_id">fcm_default_channel</string>
+    <string name="qrcode">QRCODE</string>
 </resources>
